Fix horizontal overflow in small mobile devices

--- a/Themes/default/css/FixSmileyBtn.css
+++ b/Themes/default/css/FixSmileyBtn.css
@@ -9,6 +9,7 @@
   position: fixed;
   min-height: 80vh;
   min-width: 70vw;
+  max-width: 90vw;
   z-index: 106;
   top: 10vh;
   padding: 1rem 0 1rem 1rem;
